Correction des contrastes du carrousel et des filtres

--- a/assets/style.css
+++ b/assets/style.css
@@ -87,7 +87,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #be4a4a;
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
@@ -128,7 +128,7 @@ body {
 	padding-block: 3em;
 }
 
-/* AJOUT FONT-SIZE */
+/* --- Ajout font-size --- */
 .quote__text {
 	font-family: Spectral;
 	font-style: italic;
@@ -220,7 +220,7 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
-/*	AJOUT FOOTER DANS LE HTML */
+/* --- Ajout footer dans le HTML --- */
 footer {
     padding-block: 40px;
     text-align: center;
